# libass

./: .gitignore  .mailmap  .travis.yml  COPYING  Changelog  MAINTAINERS  Makefile.am  Makefile_util.am  README.md  autogen.sh  configure.ac  dwrite.diff  gen_arabic_charmap.py  gen_defs.py  libass.pc.in  libass.sln  ltnasm.sh  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: build.yml  crash.yml  question.md  wrong-rendering-report.md  wrong-rendering-report.yml
.github/workflows/: cifuzz.yml  ghci.yml  meson.yml  qemu-arch.yml  vm.yml
ass/: meson.build
checkasm/: Makefile.am  be_blur.c  blend_bitmaps.c  blur.c  checkasm.c  checkasm.h  meson.build  rasterizer.c  shift_bitmap.c
checkasm/arm/: checkasm_64.S
checkasm/x86/: checkasm.asm
compare/: Makefile.am  README.md  compare.c  image.c  image.h  meson.build
compare/test/: sub1.ass  sub2.ass
compare/test/emoji/: README.md  emoji_basic.ass  emoji_blur.ass  emoji_border.ass  emoji_border_ellipse.ass  emoji_border_large.ass  emoji_clip.ass  emoji_mixed.ass  emoji_rotate.ass  emoji_row.ass  emoji_scale.ass  emoji_shadow.ass
fuzz/: ass.dict  fuzz.c  meson.build  writeout.c  writeout.h
libass/: Makefile.am  Makefile_library.am  ass.c  ass.h  ass_alloc.c  ass_alloc.h  ass_androidfonts.c  ass_androidfonts.h  ass_arabic_charmap.c  ass_arabic_charmap.h  ass_bitmap.c  ass_bitmap.h  ass_bitmap_engine.c  ass_bitmap_engine.h  ass_blur.c  ass_cache.c  ass_cache.h  ass_cache_template.c  ass_cache_template.h  ass_compat.h  ass_coretext.c  ass_coretext.h  ass_cpu.c  ass_cpu.h  ass_directwrite.c  ass_directwrite.cpp  ass_directwrite.h  ass_directwrite_info_template.h  ass_drawing.c  ass_drawing.h  ass_filesystem.c  ass_filesystem.h  ass_font.c  ass_font.h  ass_fontconfig.c  ass_fontconfig.h  ass_fontselect.c  ass_fontselect.h  ass_func_template.h  ass_library.c  (+36 more)
libass/aarch64/: asm.S  be_blur.S  blend_bitmaps.S  blur.S  init.h  rasterizer.S  shift_bitmap.S
libass/arm/: asm.S  blend_bitmaps.S
libass/ass/: meson.build
libass/c/: blur_template.h  c_be_blur.c  c_blend_bitmaps.c  c_blur.c  c_rasterizer.c  c_shift_bitmap.c  rasterizer_template.h
libass/x86/: be_blur.asm  be_blur.h  blend_bitmaps.asm  blend_bitmaps.h  blur.asm  cpuid.asm  cpuid.h  init.h  rasterizer.asm  rasterizer.h  utils.asm  x86inc.asm
m4/: .gitignore
msvc/: config.h  strings.h
msvcport/: CMakeLists.txt  config.h.in  strings.c  strings.h
profile/: Makefile.am  meson.build  profile.c
subprojects/: freetype2.wrap  fribidi.wrap  harfbuzz.wrap  libpng.wrap  tronkko-dirent.wrap
test/: meson.build  test.c  test.cpp
